Added basic bubble list framework and style to index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,64 @@
     </header>
 
     <main class="container-fluid">
+        <div class="bubbles">
+            <ul class="bubbles-list">
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Grains</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>
+                            Veggies
+                        </span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>
+                            Fruit
+                        </span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>
+                            Dairy
+                        </span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>
+                            Meat
+                        </span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>
+                            Fish
+                        </span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>
+                            Pantry
+                        </span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>
+                            Drinks
+                        </span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </main>
 
     <script 
