Created html files for all categories and added base code

--- a/index.html
+++ b/index.html
@@ -33,54 +33,54 @@
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="grains.html" class="bubble-link">
                         <span>Grains</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="veggies.html" class="bubble-link">
                         <span>
                             Veggies
                         </span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="fruit.html" class="bubble-link">
                         <span>
                             Fruit
                         </span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="dairy.html" class="bubble-link">
                         <span>
                             Dairy
                         </span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="meat.html" class="bubble-link">
                         <span>
                             Meat
                         </span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="fish.html" class="bubble-link">
                         <span>
                             Fish
                         </span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="pantry.html" class="bubble-link">
                         <span>
                             Pantry
                         </span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="drinks.html" class="bubble-link">
                         <span>
                             Drinks
                         </span>
