Added a bunch of items to each category--not definitive

--- a/dairy.html
+++ b/dairy.html
@@ -32,6 +32,46 @@
     <main class="container-fluid">
         <div class="bubbles">
             <ul class="bubbles-list">
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Milk</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Butter</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Sour Cream</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Whipped Cream</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Heavy Cream</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Half and Half</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Yogurt</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Cheese</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </main>
