--- a/drinks.html
+++ b/drinks.html
@@ -32,6 +32,36 @@
     <main class="container-fluid">
         <div class="bubbles">
             <ul class="bubbles-list">
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Cola</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Citrus Soda</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Root Beer</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Apple Juice</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Orange Juice</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Grape Juice</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </main>
