--- a/fish.html
+++ b/fish.html
@@ -32,6 +32,46 @@
     <main class="container-fluid">
         <div class="bubbles">
             <ul class="bubbles-list">
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Salmon</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Tuna</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Catfish</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Cod</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Tilapia</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Shrimp</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Lobster</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Crab</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </main>
