--- a/meat.html
+++ b/meat.html
@@ -32,6 +32,21 @@
     <main class="container-fluid">
         <div class="bubbles">
             <ul class="bubbles-list">
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Chicken</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Pork</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Beef</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </main>
