--- a/veggies.html
+++ b/veggies.html
@@ -32,6 +32,61 @@
     <main class="container-fluid">
         <div class="bubbles">
             <ul class="bubbles-list">
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Potatoes</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Tomatoes</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Onions</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Carrots</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Peppers</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Brocolli</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Cucumbers</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Lettuce</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Mushrooms</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Garlic</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Cabbage</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </main>
