--- a/fruit.html
+++ b/fruit.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-dark">
             <a class="navbar-brand" href="index.html"><h3>Bubblebasket&trade;</h3></a>
             <div>
-                <a class="btn btn-outline-light" href="shopping-list.html"><i class="bi bi-list-ul"></i></a>
+                <a class="btn btn-outline-light" href="shoppinglist.html"><i class="bi bi-list-ul"></i></a>
                 <button class="btn btn-outline-light"><i class="bi bi-person"></i></button>
             </div>
         </nav>
