--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -23,13 +23,36 @@
         <nav class="navbar navbar-dark">
             <a class="navbar-brand" href="index.html"><h3>Bubblebasket&trade;</h3></a>
             <div>
-                <a class="btn btn-outline-light" href="shopping-list.html"><i class="bi bi-list-ul"></i></a>
+                <a class="btn btn-outline-light" href="shoppinglist.html"><i class="bi bi-list-ul"></i></a>
                 <button class="btn btn-outline-light"><i class="bi bi-person"></i></button>
             </div>
         </nav>
     </header>
 
-    <main class="container-fluid">
+    <main class="container-fluid align-items-center justify-content-center">
+        <div>
+            <table class="table bg-secondary table-dark text-center">
+                <thead>
+                    <tr>
+                        <th scope="col">Category</th>
+                        <th scope="col">Item</th>
+                        <th scope="col">Quantity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Grains</td>
+                        <td>Cereal</td>
+                        <td>3</td>
+                    </tr>
+                    <tr>
+                        <td>Dairy</td>
+                        <td>Milk</td>
+                        <td>1</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <script 
