--- a/veggies.html
+++ b/veggies.html
@@ -91,6 +91,11 @@
         </div>
     </main>
 
+    <footer class="container-fluid px-3">
+        <div class="float-start">Created by Erik Vagil</div>
+        <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
+    </footer>
+
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
