--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -30,8 +30,9 @@
     </header>
 
     <main class="container-fluid align-items-center justify-content-center">
+        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
         <div>
-            <table class="table bg-secondary table-dark text-center">
+            <table id="shopping-list-table" class="table bg-secondary table-dark text-center">
                 <thead>
                     <tr>
                         <th scope="col">Category</th>
@@ -40,16 +41,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Grains</td>
-                        <td>Cereal</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>Dairy</td>
-                        <td>Milk</td>
-                        <td>1</td>
-                    </tr>
                 </tbody>
             </table>
         </div>
