Created more depth, added more options, and added back buttons to pages

--- a/chicken.html
+++ b/chicken.html
@@ -30,22 +30,37 @@
     </header>
 
     <main class="container-fluid">
-        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
+        <a class="btn btn-outline-light anchor-top-left" href="meat.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Bottled Water</span>
+                        <span>Ground</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="soda.html" class="bubble-link">
-                        <span>Soft Drinks</span>
+                    <a href="" class="bubble-link">
+                        <span>Wings</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="juice.html" class="bubble-link">
-                        <span>Juice</span>
+                    <a href="" class="bubble-link">
+                        <span>Breast</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Thighs</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Drumsticks</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Whole</span>
                     </a>
                 </li>
             </ul>
