--- a/grains.html
+++ b/grains.html
@@ -30,6 +30,7 @@
     </header>
 
     <main class="container-fluid">
+        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
@@ -60,6 +61,11 @@
                 <li class="bubble">
                     <a href="" class="bubble-link">
                         <span>Cornmeal</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Pasta</span>
                     </a>
                 </li>
             </ul>
