--- a/meat.html
+++ b/meat.html
@@ -30,20 +30,21 @@
     </header>
 
     <main class="container-fluid">
+        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="chicken.html" class="bubble-link">
                         <span>Chicken</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="pork.html" class="bubble-link">
                         <span>Pork</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
+                    <a href="beef.html" class="bubble-link">
                         <span>Beef</span>
                     </a>
                 </li>
