--- a/seasonings.html
+++ b/seasonings.html
@@ -30,62 +30,87 @@
     </header>
 
     <main class="container-fluid">
-        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
+        <a class="btn btn-outline-light anchor-top-left" href="pantry.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Potatoes</span>
+                        <span>Salt</span>
                     </a>
                 </li>
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Tomatoes</span>
+                        <span>Pepper</span>
                     </a>
                 </li>
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Onions</span>
+                        <span>Oregano</span>
                     </a>
                 </li>
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Carrots</span>
+                        <span>Thyme</span>
                     </a>
                 </li>
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Peppers</span>
+                        <span>Basil</span>
                     </a>
                 </li>
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Brocolli</span>
+                        <span>Bay Leaves</span>
                     </a>
                 </li>
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Cucumbers</span>
+                        <span>Cilantro</span>
                     </a>
                 </li>
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Lettuce</span>
+                        <span>Parsley</span>
                     </a>
                 </li>
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Mushrooms</span>
+                        <span>Dill</span>
                     </a>
                 </li>
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Garlic</span>
+                        <span>Coriander</span>
                     </a>
                 </li>
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Cabbage</span>
+                        <span>Cumin</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Cayenne Pepper</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Paprika</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Cinnamon</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Mustard Seeds</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Chili Flakes</span>
                     </a>
                 </li>
             </ul>
