--- a/condiments.html
+++ b/condiments.html
@@ -30,22 +30,47 @@
     </header>
 
     <main class="container-fluid">
-        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
+        <a class="btn btn-outline-light anchor-top-left" href="pantry.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Bottled Water</span>
+                        <span>Ketchup</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="soda.html" class="bubble-link">
-                        <span>Soft Drinks</span>
+                    <a href="" class="bubble-link">
+                        <span>Mustard</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="juice.html" class="bubble-link">
-                        <span>Juice</span>
+                    <a href="" class="bubble-link">
+                        <span>Ranch</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Barbeque Sauce</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Relish</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Honey</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Peanut Butter</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Hazelnut Spread</span>
                     </a>
                 </li>
             </ul>
