--- a/juice.html
+++ b/juice.html
@@ -30,22 +30,27 @@
     </header>
 
     <main class="container-fluid">
-        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
+        <a class="btn btn-outline-light anchor-top-left" href="drinks.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Bottled Water</span>
+                        <span>Apple Juice</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="soda.html" class="bubble-link">
-                        <span>Soft Drinks</span>
+                    <a href="" class="bubble-link">
+                        <span>Orange Juice</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="juice.html" class="bubble-link">
-                        <span>Juice</span>
+                    <a href="" class="bubble-link">
+                        <span>Grape Juice</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Cranberry Juice</span>
                     </a>
                 </li>
             </ul>
