--- a/pantry.html
+++ b/pantry.html
@@ -30,76 +30,27 @@
     </header>
 
     <main class="container-fluid">
+        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Salt</span>
+                    <a href="seasonings.html" class="bubble-link">
+                        <span>Seasonings</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Pepper</span>
+                    <a href="condiments.html" class="bubble-link">
+                        <span>Condiments</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Oregano</span>
+                    <a href="snacks.html" class="bubble-link">
+                        <span>Snacks</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Thyme</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Coriander</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Cumin</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Cayenne Pepper</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Ketchup</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Mustard</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Ranch</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Tortilla Chips</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Potato Chips</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Pasta</span>
-                    </a>
-                </li>
-                <li class="bubble">
-                    <a href="" class="bubble-link">
-                        <span>Beans</span>
+                    <a href="staples.html" class="bubble-link">
+                        <span>Staples</span>
                     </a>
                 </li>
             </ul>
