--- a/soda.html
+++ b/soda.html
@@ -30,22 +30,31 @@
     </header>
 
     <main class="container-fluid">
-        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Bottled Water</span>
+                        <span>Cola</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="soda.html" class="bubble-link">
-                        <span>Soft Drinks</span>
+                    <a href="" class="bubble-link">
+                        <span>Citrus Soda</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="juice.html" class="bubble-link">
-                        <span>Juice</span>
+                    <a href="" class="bubble-link">
+                        <span>Root Beer</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Sparkling Water</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Kombucha</span>
                     </a>
                 </li>
             </ul>
