--- a/staples.html
+++ b/staples.html
@@ -30,22 +30,42 @@
     </header>
 
     <main class="container-fluid">
-        <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
+        <a class="btn btn-outline-light anchor-top-left" href="pantry.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
                     <a href="" class="bubble-link">
-                        <span>Bottled Water</span>
+                        <span>Oil</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="soda.html" class="bubble-link">
-                        <span>Soft Drinks</span>
+                    <a href="" class="bubble-link">
+                        <span>Olive Oil</span>
                     </a>
                 </li>
                 <li class="bubble">
-                    <a href="juice.html" class="bubble-link">
-                        <span>Juice</span>
+                    <a href="" class="bubble-link">
+                        <span>Vinegar</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Black Beans</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Pinto Beans</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Chickpeas</span>
+                    </a>
+                </li>
+                <li class="bubble">
+                    <a href="" class="bubble-link">
+                        <span>Split Peas</span>
                     </a>
                 </li>
             </ul>
