--- a/soda.html
+++ b/soda.html
@@ -30,6 +30,7 @@
     </header>
 
     <main class="container-fluid">
+        <a class="btn btn-outline-light anchor-top-left" href="drinks.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble">
