Made bubbles that add to shopping list green

--- a/dairy.html
+++ b/dairy.html
@@ -33,42 +33,42 @@
         <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Milk</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Butter</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Sour Cream</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Whipped Cream</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Heavy Cream</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Half and Half</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Yogurt</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Cheese</span>
                     </a>
