--- a/seasonings.html
+++ b/seasonings.html
@@ -33,82 +33,82 @@
         <a class="btn btn-outline-light anchor-top-left" href="pantry.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Salt</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Pepper</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Oregano</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Thyme</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Basil</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Bay Leaves</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Cilantro</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Parsley</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Dill</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Coriander</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Cumin</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Cayenne Pepper</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Paprika</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Cinnamon</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Mustard Seeds</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Chili Flakes</span>
                     </a>
