--- a/chicken.html
+++ b/chicken.html
@@ -33,32 +33,32 @@
         <a class="btn btn-outline-light anchor-top-left" href="meat.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Ground</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Wings</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Breast</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Thighs</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Drumsticks</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Whole</span>
                     </a>
