--- a/drinks.html
+++ b/drinks.html
@@ -33,7 +33,7 @@
         <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Bottled Water</span>
                     </a>
