--- a/fish.html
+++ b/fish.html
@@ -33,42 +33,42 @@
         <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Salmon</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Tuna</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Catfish</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Cod</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Tilapia</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Shrimp</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Lobster</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Crab</span>
                     </a>
