--- a/fruit.html
+++ b/fruit.html
@@ -33,57 +33,57 @@
         <a class="btn btn-outline-light anchor-top-left" href="index.html"><i class="bi bi-arrow-return-left"></i></a>
         <div class="bubbles">
             <ul class="bubbles-list">
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Bananas</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Strawberries</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Grapes</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Apples</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Watermelon</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Oranges</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Blueberries</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Lemons</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Peaches</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Limes</span>
                     </a>
                 </li>
-                <li class="bubble">
+                <li class="bubble item">
                     <a href="" class="bubble-link">
                         <span>Avocados</span>
                     </a>
