Fixed a bug in bubble.js and added onclick events to all item bubbles

--- a/snacks.html
+++ b/snacks.html
@@ -34,34 +34,34 @@
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Snacks', 'Tortilla Chips')" class="bubble-link">
                         <span>Tortilla Chips</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Snacks', 'Potato Chips')" class="bubble-link">
                         <span>Potato Chips</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Snacks', 'Pretzels')" class="bubble-link">
                         <span>Pretzels</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Snacks', 'Granola Bars')" class="bubble-link">
                         <span>Granola Bars</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Snacks', 'Fruit Snacks')" class="bubble-link">
                         <span>Fruit Snacks</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Snacks', 'Popcorn')" class="bubble-link">
                         <span>Popcorn</span>
-                    </a>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -72,6 +72,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="bubble.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
