--- a/condiments.html
+++ b/condiments.html
@@ -34,44 +34,44 @@
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Condiments', 'Ketchup')" class="bubble-link">
                         <span>Ketchup</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Condiments', 'Mustard')" class="bubble-link">
                         <span>Mustard</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Condiments', 'Ranch')" class="bubble-link">
                         <span>Ranch</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Condiments', 'Barbeque Sauce')" class="bubble-link">
                         <span>Barbeque Sauce</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Condiments', 'Relish')" class="bubble-link">
                         <span>Relish</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Condiments', 'Honey')" class="bubble-link">
                         <span>Honey</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Condiments', 'Peanut Butter')" class="bubble-link">
                         <span>Peanut Butter</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Condiments', 'Hazelnut Spread')" class="bubble-link">
                         <span>Hazelnut Spread</span>
-                    </a>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -82,6 +82,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="bubble.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
