--- a/drinks.html
+++ b/drinks.html
@@ -34,9 +34,9 @@
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Drinks', 'Bottled Water')" class="bubble-link">
                         <span>Bottled Water</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble">
                     <a href="soda.html" class="bubble-link">
@@ -57,6 +57,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="bubble.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
