--- a/fruit.html
+++ b/fruit.html
@@ -34,59 +34,59 @@
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Bananas')" class="bubble-link">
                         <span>Bananas</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Strawberries')" class="bubble-link">
                         <span>Strawberries</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Grapes')" class="bubble-link">
                         <span>Grapes</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Apples')" class="bubble-link">
                         <span>Apples</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Watermelon')" class="bubble-link">
                         <span>Watermelon</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Oranges')" class="bubble-link">
                         <span>Oranges</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Blueberries')" class="bubble-link">
                         <span>Blueberries</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Lemons')" class="bubble-link">
                         <span>Lemons</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Peaches')" class="bubble-link">
                         <span>Peaches</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Limes')" class="bubble-link">
                         <span>Limes</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Fruit', 'Avocados')" class="bubble-link">
                         <span>Avocados</span>
-                    </a>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -97,6 +97,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="bubble.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
