--- a/grains.html
+++ b/grains.html
@@ -34,39 +34,39 @@
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Grains', 'Bread')" class="bubble-link">
                         <span>Bread</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Grains', 'Oatmeal')" class="bubble-link">
                         <span>Oatmeal</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Grains', 'Rice')" class="bubble-link">
                         <span>Rice</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Grains', 'Cereal')" class="bubble-link">
                         <span>Cereal</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Grains', 'Flour')" class="bubble-link">
                         <span>Flour</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Grains', 'Cornmeal')" class="bubble-link">
                         <span>Cornmeal</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Grains', 'Pasta')" class="bubble-link">
                         <span>Pasta</span>
-                    </a>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -77,6 +77,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="bubble.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
