--- a/seasonings.html
+++ b/seasonings.html
@@ -34,84 +34,84 @@
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Salt')" class="bubble-link">
                         <span>Salt</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Pepper')" class="bubble-link">
                         <span>Pepper</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Oregano')" class="bubble-link">
                         <span>Oregano</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Thyme')" class="bubble-link">
                         <span>Thyme</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Basil')" class="bubble-link">
                         <span>Basil</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Bay Leaves')" class="bubble-link">
                         <span>Bay Leaves</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Cilantro')" class="bubble-link">
                         <span>Cilantro</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Parsley')" class="bubble-link">
                         <span>Parsley</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Dill')" class="bubble-link">
                         <span>Dill</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Coriander')" class="bubble-link">
                         <span>Coriander</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Cumin')" class="bubble-link">
                         <span>Cumin</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Cayenne Pepper')" class="bubble-link">
                         <span>Cayenne Pepper</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Paprika')" class="bubble-link">
                         <span>Paprika</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Cinnamon')" class="bubble-link">
                         <span>Cinnamon</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Mustard Seeds')" class="bubble-link">
                         <span>Mustard Seeds</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Seasonings', 'Chili Flakes')" class="bubble-link">
                         <span>Chili Flakes</span>
-                    </a>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -122,6 +122,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="bubble.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
