--- a/soda.html
+++ b/soda.html
@@ -34,29 +34,29 @@
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Soft Drinks', 'Cola')" class="bubble-link">
                         <span>Cola</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Soft Drinks', 'Citrus Soda')" class="bubble-link">
                         <span>Citrus Soda</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Soft Drinks', 'Root Beer')" class="bubble-link">
                         <span>Root Beer</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Soft Drinks', 'Sparkling Water')" class="bubble-link">
                         <span>Sparkling Water</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Soft Drinks', 'Kombucha')" class="bubble-link">
                         <span>Kombucha</span>
-                    </a>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -67,6 +67,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="bubble.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
