--- a/staples.html
+++ b/staples.html
@@ -34,39 +34,39 @@
         <div class="bubbles">
             <ul class="bubbles-list">
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Staples', 'Oil')" class="bubble-link">
                         <span>Oil</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Staples', 'Olive Oil')" class="bubble-link">
                         <span>Olive Oil</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Staples', 'Vinegar')" class="bubble-link">
                         <span>Vinegar</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Staples', 'Black Beans')" class="bubble-link">
                         <span>Black Beans</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Staples', 'Pinto Beans')" class="bubble-link">
                         <span>Pinto Beans</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Staples', 'Chickpeas')" class="bubble-link">
                         <span>Chickpeas</span>
-                    </a>
+                    </button>
                 </li>
                 <li class="bubble item">
-                    <a href="" class="bubble-link">
+                    <button onclick="addItemToCookies('Staples', 'Split Peas')" class="bubble-link">
                         <span>Split Peas</span>
-                    </a>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -77,6 +77,7 @@
         <div class="float-end">Link to <a href="https://github.com/ErikVagil/startup">Github</a> source</div>
     </footer>
 
+    <script src="bubble.js"></script>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
